// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`histogram with rounds count 9 1`] = `
"44%
###     33%
###     ###
### 11% ### 11%
### ### ### ###
-----------------------
 1   2   3   4   5   6"
`;

exports[`histogram with rounds count 10 1`] = `
"        30%     30%
        ### 20% ###
10% 10% ### ### ###
### ### ### ### ###
-----------------------
 1   2   3   4   5   6"
`;

exports[`histogram with rounds count 13 1`] = `
"                31% 31%
                ### ###
    15%     15% ### ###
    ### 8%  ### ### ###
    ### ### ### ### ###
-----------------------
 1   2   3   4   5   6"
`;

exports[`histogram with rounds count 32 1`] = `
"                28%
                ###
                ###
        19%     ###
        ### 16% ### 16%
13%     ### ### ### ###
### 9%  ### ### ### ###
### ### ### ### ### ###
### ### ### ### ### ###
### ### ### ### ### ###
-----------------------
 1   2   3   4   5   6"
`;

exports[`histogram with rounds count 100 1`] = `
"23%
###
###
###         20%
###         ###
### 18%     ###
### ###     ###
### ###     ###
### ###     ###
### ###     ###     14%
### ### 13% ###     ###
### ### ### ### 12% ###
### ### ### ### ### ###
### ### ### ### ### ###
### ### ### ### ### ###
### ### ### ### ### ###
### ### ### ### ### ###
### ### ### ### ### ###
### ### ### ### ### ###
### ### ### ### ### ###
### ### ### ### ### ###
### ### ### ### ### ###
### ### ### ### ### ###
### ### ### ### ### ###
-----------------------
 1   2   3   4   5   6"
`;

exports[`histogram with rounds count 125 1`] = `
"26%
###
###
###
###
###
###
### 20%
### ###
### ###
### ###             18%
### ###     17%     ###
### ###     ###     ###
### ###     ###     ###
### ###     ###     ###
### ###     ###     ###
### ### 13% ###     ###
### ### ### ###     ###
### ### ### ###     ###
### ### ### ###     ###
### ### ### ###     ###
### ### ### ###     ###
### ### ### ###     ###
### ### ### ### 7%  ###
### ### ### ### ### ###
### ### ### ### ### ###
### ### ### ### ### ###
### ### ### ### ### ###
### ### ### ### ### ###
### ### ### ### ### ###
### ### ### ### ### ###
### ### ### ### ### ###
### ### ### ### ### ###
-----------------------
 1   2   3   4   5   6"
`;

exports[`histogram with rounds count 210 1`] = `
"        22%
        ###
21%     ###
###     ###
###     ###
###     ###
###     ###
###     ###
###     ###
###     ###
###     ###     17%
###     ###     ###
###     ###     ###
###     ###     ###
###     ###     ###
###     ###     ###
###     ###     ###
###     ###     ### 14%
###     ### 13% ### ###
### 13% ### ### ### ###
### ### ### ### ### ###
### ### ### ### ### ###
### ### ### ### ### ###
### ### ### ### ### ###
### ### ### ### ### ###
### ### ### ### ### ###
### ### ### ### ### ###
### ### ### ### ### ###
### ### ### ### ### ###
### ### ### ### ### ###
### ### ### ### ### ###
### ### ### ### ### ###
### ### ### ### ### ###
### ### ### ### ### ###
### ### ### ### ### ###
### ### ### ### ### ###
### ### ### ### ### ###
### ### ### ### ### ###
### ### ### ### ### ###
### ### ### ### ### ###
### ### ### ### ### ###
### ### ### ### ### ###
### ### ### ### ### ###
### ### ### ### ### ###
### ### ### ### ### ###
### ### ### ### ### ###
### ### ### ### ### ###
-----------------------
 1   2   3   4   5   6"
`;
